--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "basketballprojekt",
-  "homepage": "https://oscip.github.io/Basketball2",
+  "homepage": "https://oscip.github.io/Basketball",
   "private": true,
   "version": "0.0.0",
   "type": "module",
